test_fixtures/function/body_must_be_block.lox
// ParserError: UnexpectedToken found Number from l3c9 to l3c12 expected OpenBrace

fun f() 123;
